Sat May 25 17:06:25 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (after_gc_sweep): reduce full GC timing.

Sat May 25 11:28:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (set_const_visibility): return without clearing method
	  cache if no arguments.

	* vm_method.c (set_method_visibility): ditto.

Sat May 25 11:27:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (set_method_visibility): quote unprintable method name.

Sat May 25 11:24:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_frame_callee): returns the called name of the current
	  frame, not the previous frame.

	* eval.c (prev_frame_callee, prev_frame_func): rename and make static,
	  as these are used by rb_f_method_name() and rb_f_callee_name() only.

	* variable.c (set_const_visibility): use the called name.

Sat May 25 08:58:23 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_quote_unprintable): check if argument is a string.

Fri May 24 19:32:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* variable.c (set_const_visibility): use rb_frame_this_func() instead
	  of rb_frame_callee() for getting the name of the called method

	* test/ruby/test_module.rb: add test for private_constant with no args

Fri May 24 18:53:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: do major/full GC when:
	  * number of oldgen object is bigger than twice of
	    number of oldgen object at last full GC.
	  * number of remembered shady object is bigger than twice of
	    number of remembered shady object at last full GC.
	  * number of oldgen object and remembered shady object is bigger
	    than half of total object space.
	  (please fix my English!)

Fri May 24 17:07:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* intern.h: remove dangling rb_class_init_copy declaration
	  [ruby-core:55120] [Bug #8434]

Fri May 24 16:31:23 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_aref): raise error if given