@@ -1,3 +1,10 @@
+Sat May 25 18:08:06 2013  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* dir.c (bracket): fix copy-paste error.  When the first and last
+	  characters of fnmatch range have different length, fnmatch may
+	  have wrongly matched a path that does not really match.
+	  Coverity Scan found this bug.
+
 Sat May 25 17:06:25 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (after_gc_sweep): reduce full GC timing.
